--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@ h1 {
     color: darkblue;
 }
 
-img {
+main img {
     width: 150px;
     height: auto;
     border: 1px solid black;
@@ -22,5 +22,25 @@ img {
 }
 
 p {
+    padding: 0;
+}
+
+aside {
+    width: 500px;
+    margin: 5px;
+    border: 1px solid black;
     padding: 10px;
+    background-color: #ffdeb8;
+    color: black;
+}
+
+aside img {
+    width: 150px;
+    height: auto;
+}
+
+footer {
+    margin-top: 10px;
+    border-top: 1px solid black;
+    text-align: center;
 }
