--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,7 @@ aside {
     margin: 5px;
     border: 1px solid black;
     padding: 10px;
-    background-color: #ffdeb8;
+    background-color: lightblue;
     color: black;
 }
 
