--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -7,15 +7,19 @@
 
 h1 {
     color: var(--primary-color);
+    font-size: 3rem; /* Increase font size for prominence */
+    font-weight: bold;
 }
 
 h2 {
     color: var(--secondary-color);
-    
+    padding: 20px;
+    font-size: 2rem;
 }
 
 p {
-    padding: 0;
+    padding: 10px;
+    font-size: 1.1rem;
 }
 
 footer a{
@@ -30,28 +34,49 @@ main {
 
 .hero {
     position: relative;
-}
-
-.hero h1 {
-    color: var(--primary-color);
-    position: absolute;
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
-    background-color: rgba(255, 255, 255, 0.6); 
-    padding: 10px;
+    width: 100%;
+    height: 450px; 
 }
 
 .hero img {
     display: block;
     width: 100%;
-    height: auto;
+    height: 100%;
+}
+
+.hero h1 {
+    color: var(--primary-color);
+    position: absolute;
+    top: 10%;  
+    left: 35%; 
+    background-color: rgba(255, 255, 255, 0.7); 
+    padding: 20px;
+    font-size: 2.5rem;
+    text-align: center;
 }
 
 .hero article {
     position: absolute;
+    bottom: 20px;
+    left: 425px;
+    max-width: 600px;
+    background-color: rgba(255, 255, 255, 0.8); 
+    padding: 20px;
+    border-radius: 5px; 
 }
 
-article img {
-    float: right;
+.hero article img {
+    float: right; 
+    margin-left: 20px;  
+    width: 200px; 
+    height: auto;
+    border-radius: 10px; 
 }
+
+.hero article p {
+    clear: both; 
+    font-size: 1.2rem;
+    line-height: 1.5;
+}
+
+
