--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -55,7 +55,7 @@ header a {
     align-items: center; 
 }
 
-.adventure h2 {
+.adventure h2, .team h2 {
     grid-column: 1 / -1;
     text-align: center;
     margin-bottom: 20px;
@@ -65,6 +65,21 @@ header a {
 
     width: 250px;
     height: auto;
+}
+
+.team {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    flex-wrap: wrap;
+    justify-items: center;
+    align-items: center; 
+}
+
+.team img {
+
+    width: 250px;
+    height: 300px;
 }
 
 figcaption {
@@ -91,7 +106,7 @@ p {
 footer {
     display: grid;
     border-top: 1px solid;
-    grid-template-columns: 75% 1fr 1fr 1fr;
+    grid-template-columns: 75% 1fr 1fr 1fr 1fr 1fr;
 }
 
 footer a{
@@ -137,7 +152,7 @@ main {
     bottom: 20px;
     left: 425px;
     max-width: 600px;
-    background-color: rgba(255, 255, 255, 0.8); 
+    background-color: rgba(120, 114, 114, 0.8); 
     padding: 20px;
     border-radius: 5px; 
 }
@@ -156,4 +171,99 @@ main {
     line-height: 1.5;
 }
 
+.contact {
+    display: grid;
+    grid-template-columns: 1fr 2fr; 
+    gap: 20px; 
+    margin: 40px auto;
+    max-width: 1200px;
+    padding: 20px;
+}
 
+.contact-info {
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+}
+
+.contact-info h2 {
+    color: var(--primary-color);
+    font-size: 2rem;
+    margin-bottom: 15px;
+}
+
+.contact-info p {
+    font-size: 1rem;
+    margin-bottom: 10px;
+}
+
+.map iframe {
+    width: 100%;
+    height: 400px;
+    border-radius: 8px;
+}
+
+.comments {
+    max-width: 800px;
+    margin: 40px auto;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+fieldset {
+    border: none;
+    padding: 20px;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+.form-group label {
+    font-size: 1.1rem;
+    font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+}
+
+.form-group input,
+.form-group textarea {
+    width: 100%;
+    padding: 10px;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-top: 5px;
+}
+
+.form-group textarea {
+    height: 150px;
+    resize: vertical;
+}
+
+.radio-group {
+    margin-bottom: 20px;
+}
+
+.radio-group label {
+    margin-right: 20px;
+    font-size: 1.1rem;
+}
+
+button {
+    display: block;
+    background-color: var(--secondary-color);
+    color: white;
+    padding: 10px 20px;
+    font-size: 1.1rem;
+    border-radius: 5px;
+    display: block;
+    width: 250px;
+    margin: 0 auto;
+}
+
+button:hover {
+    background-color: var(--primary-color);
+}
