--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -62,7 +62,7 @@ header a {
     grid-column: 1 / -1;
     text-align: center;
     margin-bottom: 20px;
-    color: white;
+    color: black;
 }
 
 .adventure img {
@@ -289,7 +289,7 @@ fieldset {
 button {
     display: block;
     background-color: var(--secondary-color);
-    color: white;
+    color: black;
     padding: 10px 20px;
     font-size: 1.1rem;
     border-radius: 5px;
@@ -339,7 +339,7 @@ button:hover {
 
 .newsletter button {
     background-color: var(--secondary-color);
-    color: white;
+    color: black;
     padding: 12px 25px;
     font-size: 1.1rem;
     border-radius: 5px;
@@ -369,7 +369,7 @@ button:hover {
     margin-bottom: 20px;
     text-align: center;
     grid-column: span 3;
-    color: white;
+    color: black;
 }
 
 .cta .cta-images {
@@ -395,7 +395,7 @@ button:hover {
     grid-column: span 3;
     display: inline-block;
     background-color: var(--secondary-color);
-    color: white;
+    color: black;
     padding: 12px 25px;
     font-size: 1.2rem;
     border-radius: 5px;
@@ -429,13 +429,13 @@ button:hover {
     font-size: 2.5rem;
     margin-bottom: 20px;
     text-align: center;
-    color: white;
+    color: black;
 }
 
 .trips .trips-images {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* This creates 3 columns */
-    gap: 20px; /* Adds spacing between the items */
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
     justify-items: center;
     margin-bottom: 20px;
 }
@@ -461,7 +461,6 @@ button:hover {
     transform: scale(1.1);
 }
 
-/* Optional: Style the paragraph text */
 .trips .trip-item p {
     padding: 10px;
     font-size: 1.1rem;
